K8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sfm-frontend-service
  namespace: sfm
spec:
  type: ClusterIP
  selector:
    app: sfm-frontend
  ports:
  - port: 80
    targetPort: 80
